--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 jupyter==1.0.0
 matplotlib==2.0.2
 numpy==1.13.0
+scipy==0.19.1
+pillow==4.2.1
 
 # By default this project depends on the CPU version of TensorFlow:
 tensorflow==1.2.0
